@@ -1,5 +1,13 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Use gnulib module `dirent'.
+
+	* rcsclean.c: #include <dirent.h> unconditionally.
+	(get_directory): Define func unconditionally.
+	(main): Call `get_directory' unconditionally.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Presume <signal> provides SIG{HUP,INT,PIPE,QUIT,TERM,XCPU,XFSZ}.
 
 	* rcsutil.c (regsigs): Remove #ifdef foo and #endif, for
